--- a/assets/langs/ru.json
+++ b/assets/langs/ru.json
@@ -11,5 +11,7 @@
     "profile": "Профиль",
     "logout": "Выход",
     "about": "О приложении",
-    "developers": "Разработчики:"
+    "developers": "Разработчики:",
+    "noAccount": "Нет аккаунта? ",
+    "next": "Дальше"
 }
