--- a/assets/langs/ru.json
+++ b/assets/langs/ru.json
@@ -13,5 +13,9 @@
     "about": "О приложении",
     "developers": "Разработчики:",
     "noAccount": "Нет аккаунта? ",
-    "next": "Дальше"
+    "next": "Дальше",
+    "chooseSource": "Ввыберите источник",
+    "camera": "Камера",
+    "gallery": "Галлерея",
+    "cancel": "Отмена"
 }
